contabo-eu/apps/edumeet/stunner-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: edumeet-gatewayclass
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: edumeet-gatewayconfig
    namespace: edumeet
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: edumeet-gateway
  namespace: edumeet
spec:
  gatewayClassName: edumeet-gatewayclass
  listeners:
    - name: default-listener
      port: 3333
      protocol: UDP
